--- a/.config
+++ b/.config
@@ -142,6 +142,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-usb3disable=y
 CONFIG_PACKAGE_luci-app-uugamebooster=y
+CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-webrestriction=y
@@ -165,6 +166,7 @@ CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-usb3disable-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-watchcat-en=y
 CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
@@ -224,6 +226,7 @@ CONFIG_PACKAGE_terminfo=y
 # CONFIG_PACKAGE_trojan is not set
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_uugamebooster=y
+CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_xray-core=y
